--- a/surpresa.html
+++ b/surpresa.html
@@ -3,33 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="Página de memórias e carinho para nosso amor.">
   <title>Nossas Memórias 💕</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --rosa-principal: #c73866;
+      --rosa-secundario: #d6336c;
+      --rosa-claro: #f9bfd5;
+      --fundo: #fff5f9;
+      --efeito-hover: 0 8px 32px 0 rgba(199,56,102,0.12), 0 1.5px 8px 0 rgba(214,51,108,0.09);
+    }
     body {
       margin: 0;
       padding: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: #fff5f9;
+      background-color: var(--fundo);
       min-height: 100vh;
       display: flex;
       flex-direction: column;
     }
-
-    .header {
-      background: linear-gradient(to right, #c73866, #d6336c);
+    header.header {
+      background: linear-gradient(to right, var(--rosa-principal), var(--rosa-secundario));
       color: white;
       padding: 25px 0;
       text-align: center;
       position: relative;
     }
-
     .back-btn {
       position: absolute;
       top: 20px;
       right: 20px;
       background: white;
-      color: #c73866;
+      color: var(--rosa-principal);
       border: none;
       border-radius: 25px;
       padding: 8px 15px;
@@ -39,26 +45,22 @@
       z-index: 10;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
-
     .back-btn:hover {
-      background: #f9bfd5;
+      background: var(--rosa-claro);
       transform: translateY(-2px);
     }
-
     h1 {
       font-family: 'Great Vibes', cursive;
       font-size: 3rem;
       margin: 0;
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
     }
-
     .subtitle {
       font-size: 1.1rem;
       margin-top: 5px;
       opacity: 0.9;
     }
-
-    .content {
+    main.content {
       flex: 1;
       padding: 20px;
       max-width: 500px;
@@ -66,15 +68,37 @@
       width: 100%;
       box-sizing: border-box;
     }
-
-    .memory-section {
+    /* Fade in scroll effect */
+    .memory-section, .love-letter, .love-btn, .heart {
+      opacity: 0;
+      transform: translateY(40px);
+      transition: all 0.7s cubic-bezier(.38,1.15,.7,1);
+      will-change: opacity, transform;
+    }
+    .memory-section.visible, .love-letter.visible, .love-btn.visible, .heart.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+    .memory-section,
+    .love-letter {
       background: white;
       border-radius: 20px;
       padding: 25px;
       margin: 25px auto;
       box-shadow: 0 4px 12px rgba(199, 56, 102, 0.1);
+      transition: box-shadow 0.35s, transform 0.35s, background 0.25s;
+      cursor: pointer;
     }
-
+    /* Hover effect for info blocks */
+    .memory-section:hover,
+    .memory-section:focus-within,
+    .love-letter:hover,
+    .love-letter:focus-within {
+      box-shadow: var(--efeito-hover);
+      background: #fff0f6;
+      transform: translateY(-6px) scale(1.03);
+      outline: none;
+    }
     .photo-collage {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -82,55 +106,39 @@
       margin: 20px 0;
       position: relative;
     }
-
     .photo-collage img {
       width: 100%;
       border-radius: 15px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s;
+      transition: 
+        transform 0.3s,
+        box-shadow 0.35s,
+        background 0.25s;
+      background: #fff;
+      cursor: pointer;
     }
-
-    .photo-collage img:hover {
-      transform: scale(1.05);
-      z-index: 1;
-    }
-
-    /* Sobreposição para efeito de amontoado */
-    .photo-collage img:nth-child(1) {
-      transform: rotate(-5deg);
-      z-index: 3;
-    }
-    .photo-collage img:nth-child(2) {
-      transform: rotate(3deg);
+    .photo-collage img:hover,
+    .photo-collage img:focus {
+      transform: scale(1.08) rotate(2deg);
+      box-shadow: var(--efeito-hover), 0 6px 24px rgba(199,56,102,0.18);
+      background: #fff0f6;
+      outline: 2px solid var(--rosa-claro);
       z-index: 2;
-      margin-top: 15px;
     }
-    .photo-collage img:nth-child(3) {
-      transform: rotate(-2deg);
-      z-index: 1;
-      margin-top: -10px;
-    }
-    .photo-collage img:nth-child(4) {
-      transform: rotate(4deg);
-      z-index: 2;
-      margin-top: 10px;
-    }
-    .photo-collage img:nth-child(5) {
-      transform: rotate(-3deg);
-      z-index: 3;
-      margin-top: -15px;
-    }
-
+    .photo-collage img:nth-child(1) { transform: rotate(-5deg); z-index: 3; }
+    .photo-collage img:nth-child(2) { transform: rotate(3deg); z-index: 2; margin-top: 15px; }
+    .photo-collage img:nth-child(3) { transform: rotate(-2deg); z-index: 1; margin-top: -10px; }
+    .photo-collage img:nth-child(4) { transform: rotate(4deg);  z-index: 2; margin-top: 10px; }
+    .photo-collage img:nth-child(5) { transform: rotate(-3deg); z-index: 3; margin-top: -15px; }
     .love-letter {
       background: #fff9fb;
-      border: 2px dashed #f9bfd5;
+      border: 2px dashed var(--rosa-claro);
       border-radius: 15px;
       padding: 20px;
       margin: 30px auto;
       text-align: left;
       position: relative;
     }
-
     .love-letter:before {
       content: "✉️";
       position: absolute;
@@ -146,9 +154,8 @@
       justify-content: center;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
-
     .love-btn {
-      background: linear-gradient(to right, #c73866, #d6336c);
+      background: linear-gradient(to right, var(--rosa-principal), var(--rosa-secundario));
       color: white;
       border: none;
       border-radius: 50px;
@@ -159,106 +166,118 @@
       transition: all 0.3s;
       box-shadow: 0 4px 15px rgba(199, 56, 102, 0.3);
       display: block;
-    }
-
-    .love-btn:hover {
-      transform: translateY(-3px);
-      box-shadow: 0 6px 20px rgba(199, 56, 102, 0.4);
-    }
-
-    .hidden-message {
       opacity: 0;
-      transform: translateY(20px);
-      transition: all 0.5s ease-out;
-      margin: 30px 0;
+      transform: translateY(40px);
     }
-
-    .visible {
+    .love-btn.visible {
       opacity: 1;
       transform: translateY(0);
     }
-
+    .love-btn:hover, .love-btn:focus {
+      transform: translateY(-3px) scale(1.06);
+      box-shadow: 0 6px 20px rgba(199, 56, 102, 0.4);
+      outline: none;
+      background: linear-gradient(to right, #d6336c, #c73866);
+    }
     .heart {
       font-size: 2rem;
       animation: pulse 1.5s infinite;
-      margin: 20px 0;
-      display: inline-block;
+      margin: 20px auto 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      opacity: 0;
+      transform: translateY(40px);
+      transition: all 0.7s cubic-bezier(.38,1.15,.7,1);
     }
-
+    .heart.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
     @keyframes pulse {
       0%, 100% { transform: scale(1); }
       50% { transform: scale(1.3); }
     }
-
-    .footer {
-      background: linear-gradient(to right, #c73866, #d6336c);
+    footer.footer {
+      background: linear-gradient(to right, var(--rosa-principal), var(--rosa-secundario));
       padding: 15px 0;
       text-align: center;
       color: white;
       font-size: 0.8rem;
     }
+    @media (max-width: 600px) {
+      h1 { font-size: 2rem;}
+      main.content { padding: 8px;}
+    }
   </style>
 </head>
 <body>
-  <div class="header">
-    <button class="back-btn" onclick="window.location.href='escolha.html'">Voltar</button>
+  <header class="header">
+    <button class="back-btn" onclick="window.location.href='escolha.html'" aria-label="Voltar para o menu">Voltar</button>
     <h1>Nossas Memórias</h1>
     <div class="subtitle">Cada momento com você é um tesouro 💖</div>
-  </div>
-
-  <div class="content">
-    <div class="memory-section">
+  </header>
+  <main class="content" role="main">
+    <section class="memory-section" id="musica" tabindex="0">
       <h2>Primeira música dedicada a nós</h2>
-      <iframe style="border-radius:12px" 
-        src="https://open.spotify.com/embed/track/66KlcaDo2PlaFpumUHVG0W?utm_source=generator&theme=0" 
-        width="100%" height="152" frameBorder="0" 
-        allowfullscreen="" 
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
-        loading="lazy">
+      <iframe style="border-radius:12px"
+        src="https://open.spotify.com/embed/track/66KlcaDo2PlaFpumUHVG0W?utm_source=generator&theme=0"
+        width="100%" height="152" frameBorder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+        title="Primeira música do casal">
       </iframe>
-    </div>
-
-    <div class="memory-section">
+    </section>
+    <section class="memory-section" id="fotos" tabindex="0">
       <h2>Nossos Momentos</h2>
       <div class="photo-collage">
-        <img src="https://i.imgur.com/gfW6bSm.jpeg" alt="Nossa foto 1">
-        <img src="https://i.imgur.com/g8kfu1M.jpeg" alt="Nossa foto 2">
-        <img src="https://i.imgur.com/J8MHKle.jpeg" alt="Nossa foto 3">
-        <img src="https://i.imgur.com/EAeONS3.jpeg" alt="Nossa foto 4">
+        <img src="https://i.imgur.com/gfW6bSm.jpeg" alt="Nossa foto 1" tabindex="0">
+        <img src="https://i.imgur.com/g8kfu1M.jpeg" alt="Nossa foto 2" tabindex="0">
+        <img src="https://i.imgur.com/J8MHKle.jpeg" alt="Nossa foto 3" tabindex="0">
+        <img src="https://i.imgur.com/EAeONS3.jpeg" alt="Nossa foto 4" tabindex="0">
       </div>
-    </div>
-
-    <div class="love-letter">
+    </section>
+    <section class="love-letter" id="carta" tabindex="0">
       <h2>Para você, meu amor...</h2>
       <p>Oi, amor 💌</p>
-      <p>Desde o dia em que a gente se conheceu, minha vida mudou de um jeito que eu nem sei explicar. Parece que tudo ficou mais colorido, mais leve... mais feliz. Você chegou de mansinho, e sem perceber, virou tudo. Virou casa, virou paz, virou motivo pra sorrir todo dia.</p>
+      <p>Desde o dia em que a gente se conheceu, minha vida mudou de um jeito que eu nem sei explicar. Parece que tudo ficou mais colorido, mais leve... mais feliz. Você chegou de mansinho, e sem perceber, virou tudo pra mim.</p>
       <p>Cada risada sua, cada olhar, cada momento ao seu lado é um presente que eu guardo com todo carinho. Às vezes eu paro e penso em como a vida foi generosa comigo por ter me dado você. De verdade.</p>
-      <p>Você é quem faz meus dias começarem com vontade e terminarem em paz. É o abraço que acalma, o apoio nas horas difíceis, a companhia que eu sempre quis. E eu sou tão, mas tão grato por te ter.</p>
+      <p>Você é quem faz meus dias começarem com vontade e terminarem em paz. É o abraço que acalma, o apoio nas horas difíceis, a companhia que eu sempre quis. E eu sou tão, mas tão grato por tudo isso.</p>
       <p>Obrigado por ser você. Por ser tão incrível, tão de verdade. Por me fazer sentir amado só com um "oi" ou um sorriso. Por me fazer querer ser melhor todos os dias.</p>
       <p>Eu só queria que você soubesse disso: eu te amo, e vou estar aqui sempre, pra tudo. Pra rir com você, pra dividir os silêncios, pra sonhar junto e enfrentar qualquer coisa de mãos dadas.</p>
-      <p class="hidden-message" id="secretMessage"> 💫</p>
-    </div>
-
-    <button class="love-btn" id="loveBtn">Clique aqui se me ama ❤️</button>
-    <div class="heart">❤️</div>
-  </div>
-
-  <div class="footer">
+      <p class="final-mensagem" style="margin-top:20px; font-weight:bold;">Você é meu maior presente! 💫</p>
+    </section>
+    <button class="love-btn" id="loveBtn" tabindex="0">Clique aqui se me ama ❤️</button>
+    <div class="heart" id="heart">❤️</div>
+  </main>
+  <footer class="footer">
     Feito com ❤️ para você
-  </div>
-
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
   <script>
-    // Revelar mensagem secreta ao rolar
-    window.addEventListener('scroll', () => {
-      const secretMessage = document.getElementById('secretMessage');
-      const messagePosition = secretMessage.getBoundingClientRect().top;
-      const screenPosition = window.innerHeight / 1.3;
+    // Função para exibir elementos ao rolar a página
+    function showOnScroll() {
+      const elements = [
+        document.getElementById('musica'),
+        document.getElementById('fotos'),
+        document.getElementById('carta'),
+        document.getElementById('loveBtn'),
+        document.getElementById('heart')
+      ];
+      const windowBottom = window.innerHeight + window.scrollY;
+      elements.forEach((el, i) => {
+        if (!el.classList.contains('visible')) {
+          const position = el.getBoundingClientRect().top + window.scrollY + 40;
+          if (windowBottom > position) {
+            setTimeout(() => { el.classList.add('visible'); }, i * 150);
+          }
+        }
+      });
+    }
 
-      if(messagePosition < screenPosition) {
-        secretMessage.classList.add('visible');
-      }
-    });
+    window.addEventListener('scroll', showOnScroll);
+    window.addEventListener('DOMContentLoaded', showOnScroll);
 
     // Botão de amor com confetti
     document.getElementById('loveBtn').addEventListener('click', () => {
@@ -268,8 +287,6 @@
         origin: { y: 0.6 },
         colors: ['#ff0000', '#ff69b4', '#ff1493']
       });
-      
-      // Mudar texto do botão temporariamente
       const btn = document.getElementById('loveBtn');
       btn.textContent = "Eu também te amo! 💕";
       setTimeout(() => {
